# answerplz

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
scripts/: Dockerfile.ci  collect-installers.sh  docker-linux-build.sh  release.sh  resolve-app-version.mjs
src/: App.tsx  DisplayPreview.css  DisplayPreview.tsx  MonitorPicker.css  MonitorPicker.tsx  Overlay.css  Overlay.tsx  Setup.css  Setup.tsx  appVersion.ts  checkForUpdates.ts  copyToClipboard.ts  formatHistoryDate.ts  main.tsx  monitorLayout.ts  overlayActions.ts  overlayResize.ts  overlayWindowLayout.ts  parseConfidenceAnswer.ts  types.ts  useOverlayHitTest.ts  windowTraits.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  config.rs  display_preview.rs  history.rs  hotkey.rs  lib.rs  main.rs  platform.rs  screenshot.rs
