[package]
name = "answerplz"
version = "0.33.0"
description = "Screen overlay that screenshots and answers questions with your AI key"
authors = ["Tom Manion"]
edition = "2021"

[lib]
name = "answerplz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
genai = "0.5"
base64 = "0.22"
dirs = "6"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
display-info = "0.4"
arboard = "3"

[target.'cfg(not(target_os = "macos"))'.dependencies]
screenshots = "0.8.10"
image = { version = "0.24", default-features = false, features = ["jpeg"] }
